# PICO_analyzer

./: .gitignore  README.md  serialDevice.py  serialPort.py
Docs/: .gitignore  C.aux  Chapters.aux  bibliography.bib  main.aux  main.bbl-SAVE-ERROR  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc  shorts.aux  verticalPages.tex
Docs/Chapters/: ADC_description.aux  ADC_description.tex  Analog_partTest.tex  Core_tasks.tex  WIFI.aux  WIFI.tex  analyzer_desctiption.aux  analyzer_desctiption.tex  communication.aux  communication.tex  description.aux  description.tex  digital_test.tex  gui.tex  hardware.aux  hardware.tex  sch.aux  schematics.aux  schematics.tex  summary.tex
Docs/Img/: block_diagram.tex  dma_routine.tex  input.tex  logic_stateMachine.tex
Docs/Measure/: filter_ADS1115.csv  filter_PICO.csv
Frame/: Frame.stl
GUI/: CMakeLists.txt  communicationConfig.h  main.cpp  mainwindow.cpp  mainwindow.h
GUI/Array2D/: array2d.cpp  array2d.hpp  array2d_imp.hpp
GUI/Serial/: serial.cpp  serial.hpp  serial_ui.cpp  serial_ui.hpp
GUI/Widget/AddChartWindow/: addChartWindow.cpp  addChartWindow.hpp
GUI/Widget/Charts/: chart.cpp  chart.hpp
GUI/Widget/Charts/Analog/: analogChart.cpp  analogChart.hpp
GUI/Widget/Charts/Digital/: digitalChart.cpp  digitalChart.hpp
GUI/Widget/TopBar/: topBar.cpp  topBar.hpp
GUI/Widget/ValueEdit/: valueEdit.cpp  valueEdit.hpp
firmware/: CMakeLists.txt  main.c  util.h
firmware/ADC/: ADC.c  ADC.h  ADC_bootStrap.c  ADC_bootStrap.h  ADS1115.c  ADS1115.h  Pico_ADC.c  Pico_ADC.h
firmware/Communication/: communication.c  communication.h  communication_config.h
firmware/Communication/WiFi/: dhcpserver.c  dhcpserver.h  wifi.c  wifi.h  wifi_test.py
firmware/Communication/Wire/: wire_communication.c  wire_communication.h
firmware/Core1_bootstrap/: core1.c  core1.h
firmware/DMA/: dma.c  dma.h
firmware/LED/: led.c  led.h
firmware/Multicore_fifo/: multicore_fifo.c  multicore_fifo.h
firmware/PIO/: analyze.c  analyze.h  read.h  read.pio
firmware/PWM_timer/: timer.c  timer.h
firmware/Ring_buffer/: ring_buffer.c  ring_buffer.h
firmware/WIFI/: dhcpserver.c  wifi.c  wifi.h
